tests/paczka1/small_fuzzy/51256479.err
Error in line 1: fJ3qoYLAg A210 4,0
Error in line 8: QokD A283 893,1
